--- a/TODO.txt
+++ b/TODO.txt
@@ -6,3 +6,6 @@
 - Animation.
 - Bigger buttons for touch.
 - Unselect.
+- Fix COPY
+- View registers.
+    - Could be with mouseover, but doesn't support touch nicely?
